SERVER-75277 Clear resource consumption metrics before each TTL index pass